--- a/todos-frontend/.env
+++ b/todos-frontend/.env
@@ -1,2 +1,2 @@
-﻿REACT_APP_API_URL=http://localhost:11518/api/
-REACT_APP_SERVICE_TYPE=local
+REACT_APP_API_URL=http://localhost:8081/api/
+REACT_APP_SERVICE_TYPE=api
