--- a/todos-frontend/package.json
+++ b/todos-frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todos-frontend",
   "version": "0.1.0",
+  "homepage": "https://lesterdlb.github.io/minimal-api-todos",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
+    "gh-pages": "^4.0.0",
     "jest-editor-support": "^30.2.0"
   }
 }
