--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       context: .
       dockerfile: ./docker/node/Dockerfile
       args:
-        - REACT_APP_API_URL=http://localhost:8081/api
-        - REACT_APP_SERVICE_TYPE=api
+        - VITE_API_URL=http://localhost:8081/api
+        - VITE_SERVICE_TYPE=api
     ports:
       - '3000:80'
     volumes:
