--- a/todos-frontend/package.json
+++ b/todos-frontend/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "homepage": "https://lesterdlb.github.io/minimal-api-todos",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.4",
@@ -16,40 +23,16 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "typescript": "^5.4.5",
     "web-vitals": "^3.5.2"
   },
-  "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.0",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.1.1",
-    "jest-editor-support": "^32.0.0-beta.0"
+    "jest-editor-support": "^32.0.0-beta.0",
+    "vite": "^7.1.1",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
