--- a/todos-frontend/package.json
+++ b/todos-frontend/package.json
@@ -1,38 +1,43 @@
 {
-  "name": "todos-frontend",
-  "version": "0.1.0",
-  "homepage": "https://lesterdlb.github.io/minimal-api-todos",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.4",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "axios": "^1.6.8",
-    "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "sass": "^1.55.0",
-    "typescript": "^5.4.5",
-    "web-vitals": "^3.5.2"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint-config-react-app": "^7.0.1",
-    "gh-pages": "^6.1.1",
-    "jest-editor-support": "^32.0.0-beta.0",
-    "vite": "^7.1.1",
-    "vite-plugin-svgr": "^4.3.0"
-  }
+	"name": "todos-frontend",
+	"version": "0.1.0",
+	"homepage": "https://lesterdlb.github.io/minimal-api-todos",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^30.0.0",
+		"axios": "^1.12.2",
+		"react": "^19.2.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "^19.2.0",
+		"react-error-boundary": "^6.0.0",
+		"sass": "^1.93.2",
+		"typescript": "^5.9.3",
+		"web-vitals": "^5.1.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.36.0",
+		"@types/node": "^24.6.0",
+		"@types/react": "^19.2.0",
+		"@types/react-dom": "^19.2.0",
+		"@vitejs/plugin-react": "^5.0.4",
+		"eslint": "^9.36.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.22",
+		"globals": "^16.4.0",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.45.0",
+		"vite": "^7.1.7",
+		"vite-plugin-svgr": "^4.5.0"
+	}
 }
