--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
     todos-api:
         container_name: todos-api
@@ -7,7 +5,7 @@ services:
             context: .
             dockerfile: ./docker/dotnet/Dockerfile
         ports:
-            - '8081:80'
+            - '8081:8081'
         networks:
             - network
 
@@ -19,15 +17,13 @@ services:
             context: .
             dockerfile: ./docker/node/Dockerfile
             args:
-                - VITE_API_URL=http://localhost:8081/api
+                - VITE_API_URL=http://localhost:8081
                 - VITE_SERVICE_TYPE=api
         ports:
             - '3000:80'
-        volumes:
-            - ./todos-frontend:/app
         networks:
             - network
 
 networks:
     network:
-        external: true
+        driver: bridge
