--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,19 +1,19 @@
-FROM node:16.17.1-alpine3.16 AS base
+FROM node:24.9.0-alpine3.21 AS base
 
 WORKDIR /usr/src/app
-COPY /todos-frontend/package*.json /todos-frontend/yarn.lock ./
-RUN yarn
-COPY /todos-frontend .
+COPY todos-frontend/package*.json ./
+RUN npm install
+COPY todos-frontend .
 
-ARG REACT_APP_API_URL
-ENV REACT_APP_API_URL $REACT_APP_API_URL
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 
-ARG REACT_APP_SERVICE_TYPE
-ENV REACT_APP_SERVICE_TYPE $REACT_APP_SERVICE_TYPE
+ARG VITE_SERVICE_TYPE
+ENV VITE_SERVICE_TYPE=$VITE_SERVICE_TYPE
 
-RUN yarn build
+RUN npm run build
 
-FROM nginx:1.23.0-alpine
-COPY --from=base /usr/src/app/build /usr/share/nginx/html
+FROM nginx:stable-alpine3.21 AS final
+COPY --from=base /usr/src/app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
